# SlicerDeformView

./: .gitignore  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  DeformView.json  LICENSE.txt  README.md
DeformView/: CMakeLists.txt  DeformView.py
DeformView/Resources/UI/: DeformView.ui  DeformView_ui.py
DeformViewVisualizer/DeformView/: DeformView.py
paper/: paper.bib  paper.md
